fix overflow on resize

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -18,3 +18,7 @@
   font-family: lolFont;
   src: url('fonts/FrizQuadrataRegular.woff');
 }
+
+html {
+  overflow: hidden;
+}
